--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <div class="description">
                             <h3>BSc in Information Technology</h3>
                             <p>
-                                The University os the West Indies
+                                The University of the West Indies
                             </p>
                         </div>
                         
